# goom

./: CMakeLists.txt  LICENSE  README.md  consts.h  goom.c  volt_per_oct.ipynb
.github/workflows/: cmake-single-platform.yml
scripts/: volt_per_oct.ipynb
src/: goom.c  tusb_config.h  usb_descriptors.c
